// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`custom recipe creation creates using recipe classes (mixing): serialized 1`] = `
{
  "heatRequirement": "heated",
  "ingredients": [
    {
      "tag": "c:plates/iron",
    },
  ],
  "keepHeldItem": true,
  "processingTime": 100,
  "results": [
    {
      "item": "minecraft:iron_ingot",
    },
  ],
  "type": "create:mixing",
}
`;

exports[`custom recipe creation creates using recipe classes (crushing): serialized 1`] = `
{
  "ingredients": [
    {
      "tag": "c:plates/iron",
    },
  ],
  "results": [
    {
      "count": 4,
      "item": "minecraft:iron_ingot",
    },
    {
      "chance": 0.5,
      "item": "minecraft:stone",
    },
  ],
  "type": "create:crushing",
}
`;

exports[`custom recipe creation creates using recipe classes (mechanical_crafting): serialized 1`] = `
{
  "key": {
    "A": {
      "item": "minecraft:diamond",
    },
    "B": {
      "tag": "c:ingots/copper",
    },
    "I": {
      "tag": "c:plates/lead",
    },
    "X": {
      "item": "minecraft:string",
    },
  },
  "pattern": [
    "AXAXA",
    "XB BX",
    "AXAXA",
    "IIIII",
  ],
  "result": {
    "item": "create:large_cogwheel",
  },
  "type": "create:mechanical_crafting",
}
`;

exports[`custom recipe creation creates using recipe classes (sequenced_assembly): serialized 1`] = `
{
  "ingredient": {
    "item": "minecraft:string",
  },
  "loops": 5,
  "results": [
    {
      "item": "create:zinc_ingot",
    },
    {
      "chance": 0.2,
      "count": 4,
      "item": "create:zinc_nugget",
    },
  ],
  "sequence": [
    {
      "ingredients": [
        {
          "tag": "c:plates/iron",
        },
      ],
      "results": [
        {
          "item": "minecraft:obsidian",
        },
      ],
      "type": "create:compacting",
    },
    {
      "ingredients": [
        {
          "tag": "c:plates/copper",
        },
      ],
      "results": [
        {
          "item": "minecraft:obsidian",
        },
      ],
      "type": "create:haunting",
    },
  ],
  "transitionalItem": {
    "item": "minecraft:obsidian",
  },
  "type": "create:sequenced_assembly",
}
`;
